name:                tisp
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Benjamin Saunders
maintainer:          ben.e.saunders@gmail.com
-- copyright:           
category:            Compilers/Interpreters
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10



library
  default-extensions:  OverloadedStrings, TemplateHaskell, GeneralizedNewtypeDeriving, RecordWildCards, StandaloneDeriving
  exposed-modules:     Tisp.Tokenize, Tisp.Parse, Tisp.AST, Tisp.Value, Tisp.Expr
  build-depends:       base >=4.8 && <5, containers ==0.5.*, bytestring ==0.10.*, text ==1.2.*, lens ==4.*, mtl ==2.2.*, ansi-wl-pprint ==0.6.*, llvm-general-pure ==3.5.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable tisp
  hs-source-dirs:      tisp
  main-is:             Main.hs
  build-depends:       tisp, base >=4.8 && <5, containers ==0.5.*, bytestring ==0.10.*, text ==1.2.*, lens ==4.*, mtl ==2.2.*, ansi-wl-pprint ==0.6.*
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5, containers ==0.5.*, test-framework, test-framework-hunit, HUnit ==1.3.*, tisp, lens ==4.*, text ==1.2.*
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings